Adding Search Video Detail and Hosting in Netlify

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_RAPID_API_KEY='81d3a45a4dmsh7d7065fb4a02470p16b350jsn882b464cd870'
+# REACT_APP_RAPID_API_KEY='81d3a45a4dmsh7d7065fb4a02470p16b350jsn882b464cd870'
+REACT_APP_RAPID_API_KEY='530769a387msh5a4cb42e4bf8facp17cb4cjsn1446ce628d33'
